argocd/platform/argocd-ui/dex-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-dex-server
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - dex.192.168.33.100.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-dex-server
          port: 5556
